expected_expression/expected_expression/g1/update_ancestors
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/update_ancestors/src/proof.c:1355:6: error: expected expression
if ( struct node ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/update_ancestors/src/obj/proof.o] Error 1
